# django-challenge-parser

./: README.md  db.sqlite3  pyproject.toml
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
scraper/: settings.py  urls.py
templates/: head.html  home.html  page_detail.html
