[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["HUGO DEL SOLAR <hudrec11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"
django-bootstrap3 = "^23.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
